# Digital-Library

./: README.md  package-lock.json  package.json  vercel.json
backend/: .gitignore  pyproject.toml  requirements.txt
backend/nuesa_backend/: manage.py
backend/nuesa_backend/nuesa_backend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json  vercel.json
frontend/frontend/: README.md  package-lock.json  package.json
frontend/frontend/public/: index.html
frontend/frontend/src/: index.css
frontend/frontend/src/pages/: AdminPage.js  CoursePage.js
frontend/frontend/static/css/: main.30910516.css.map
frontend/frontend/static/js/: main.09bdadfb.js
frontend/src/: App.js  index.js
frontend/src/components/: TypewriterText.js
frontend/src/components/Layout/: Footer.js
frontend/src/pages/: AboutPage.js  AdminPage.js  CoursePage.js  DepartmentDetail.js  DepartmentsPage.js  LandingPage.js  Leadership.jsx  MapPage.js
frontend/static/css/: main.30910516.css
frontend/static/js/: main.09bdadfb.js.LICENSE.txt  main.09bdadfb.js.map
public/: index.html
src/: App.js  index.css
src/components/: TypewriterText.js
src/components/Layout/: Footer.js
src/pages/: AboutPage.js  AdminPage.js  DepartmentDetail.js  LandingPage.js  Leadership.jsx
