[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.4.3",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
